syntax = "proto3";

package logboard;

option java_multiple_files = true;
option java_package = "com.open.logboard_grpc.proto";
option java_outer_classname = "LogBoardGRpcProto";

service LogCollectorService {
  rpc collectLog(LogMessage) returns (LogResponse);
}

message LogMessage {
  string server_name = 1;
  string level = 2;
  string message = 3;
  string timestamp = 4;
  string logger = 5;
  string thread = 6;
}

message LogResponse {
  bool success = 1;
  string message = 2;
}